Reworked the "cannot drag over stamped item" feature and created a test for it.

--- a/test/index.html
+++ b/test/index.html
@@ -184,6 +184,17 @@
     <div class="item i7"></div>
   </div>
 
+  <div id="drag2" class="container has-stamps place-stamps">
+    <div class="item i0"></div>
+    <div class="item i1"></div>
+    <div class="item i2"></div>
+    <div class="item i3 dragger"></div>
+    <div class="item i4 stamp stamp1"></div>
+    <div class="item i5"></div>
+    <div class="item i6"></div>
+    <div class="item i7"></div>
+  </div>
+
   <h2>Fitting</h2>
 
   <div id="fitting" class="container">
