--- a/sandbox/draggabilly.html
+++ b/sandbox/draggabilly.html
@@ -123,8 +123,7 @@ window.onload = function() {
   var packery4 = new Packery( ex4, {
     columnWidth: 50,
     rowHeight: 50,
-    transitionDuration: '0.6s',
-    gutter: 15
+    transitionDuration: '0.6s'
   });
 
   var layoutCount4 = 0;
