fit column height; layout at drag end

--- a/sandbox/piickery1.html
+++ b/sandbox/piickery1.html
@@ -23,6 +23,12 @@
   background: #8BE;
 }
 
+.grid-item.is-dragging,
+.grid-item.is-positioning-post-drag {
+  z-index: 2;
+  opacity: 0.8;
+}
+
 .grid-item.w2 { width: 200px; }
 .grid-item.h2 { height: 200px; }
 </style>
