--- a/sandbox/piickery-uneven.html
+++ b/sandbox/piickery-uneven.html
@@ -32,6 +32,12 @@
 .grid-item.w2 { width: 200px; }
 .grid-item.h2 { height: 100px; }
 .grid-item.h3 { height: 140px; }
+
+canvas {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
 </style>
 
 </head>
