--- a/sandbox/piickery1.html
+++ b/sandbox/piickery1.html
@@ -31,6 +31,12 @@
 
 .grid-item.w2 { width: 200px; }
 .grid-item.h2 { height: 200px; }
+
+canvas {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
 </style>
 
 </head>
