--- a/sandbox/fit.html
+++ b/sandbox/fit.html
@@ -18,7 +18,7 @@
 
   #expanding-demo .item.is-expanded {
     height: 60px;
-    width: 100%;
+    width: 50%;
     background: #1D6;
   }
 
@@ -29,6 +29,12 @@
   #position-demo .item {
     width: 60px;
     height: 60px;
+  }
+
+  canvas {
+    position: absolute;
+    right: 10px;
+    top: 10px;
   }
   </style>
 
