use "shift"; remove placeRect; add save position demo

--- a/sandbox/fit.html
+++ b/sandbox/fit.html
@@ -100,7 +100,7 @@ docReady( function() {
 
       if ( isExpanded ) {
         // if shrinking, just layout
-        pckry.layout();
+        pckry.shiftLayout();
       } else {
         // if expanding, fit it
         pckry.fit( target );
