--- a/sandbox/save-positions.html
+++ b/sandbox/save-positions.html
@@ -108,6 +108,7 @@ var pckry = new Packery( grid, {
   itemSelector: '.grid-item',
   columnWidth: '.grid-sizer',
   transitionDuration: '0.3s',
+  shiftResize: true,
   percentPosition: true,
   isInitLayout: false
 });
