--- a/sandbox/add-remove.html
+++ b/sandbox/add-remove.html
@@ -30,13 +30,9 @@
     <div class="item w4"></div>
   </div>
 
-<script src="../bower_components/get-style-property/get-style-property.js"></script>
 <script src="../bower_components/get-size/get-size.js"></script>
 <script src="../bower_components/matches-selector/matches-selector.js"></script>
-<script src="../bower_components/eventEmitter/EventEmitter.js"></script>
-<script src="../bower_components/eventie/eventie.js"></script>
-<script src="../bower_components/doc-ready/doc-ready.js"></script>
-<script src="../bower_components/classie/classie.js"></script>
+<script src="../bower_components/ev-emitter/ev-emitter.js"></script>
 <script src="../bower_components/fizzy-ui-utils/utils.js"></script>
 <script src="../bower_components/outlayer/item.js"></script>
 <script src="../bower_components/outlayer/outlayer.js"></script>
@@ -71,8 +67,6 @@ function getItemFragment() {
   };
 }
 
-docReady( function() {
-
   var container = document.querySelector('.container');
   var pckry = window.packery7 = new Packery( container );
 
@@ -94,7 +88,7 @@ docReady( function() {
 
   container.addEventListener( 'click', function( event ) {
     var elem = event.target;
-    if ( !classie.has( elem, 'item' ) ) {
+    if ( !matchesSelector( elem, '.item' ) ) {
       return;
     }
 
@@ -102,7 +96,6 @@ docReady( function() {
     pckry.layout();
   });
 
-});
 </script>
 
 </body>
