--- a/sandbox/draggabilly.html
+++ b/sandbox/draggabilly.html
@@ -77,13 +77,9 @@
   </div>
 
 
-<script src="../bower_components/get-style-property/get-style-property.js"></script>
 <script src="../bower_components/get-size/get-size.js"></script>
 <script src="../bower_components/matches-selector/matches-selector.js"></script>
-<script src="../bower_components/eventie/eventie.js"></script>
-<script src="../bower_components/classie/classie.js"></script>
-<script src="../bower_components/eventEmitter/EventEmitter.js"></script>
-<script src="../bower_components/doc-ready/doc-ready.js"></script>
+<script src="../bower_components/ev-emitter/ev-emitter.js"></script>
 <script src="../bower_components/fizzy-ui-utils/utils.js"></script>
 <script src="../bower_components/unipointer/unipointer.js"></script>
 <script src="../bower_components/unidragger/unidragger.js"></script>
@@ -116,8 +112,6 @@ function bindDraggies( packery ) {
 
 }
 
-
-window.onload = function() {
 
   var ex4 = document.getElementById('ex4');
   var packery4 = new Packery( ex4, {
@@ -154,8 +148,8 @@ window.onload = function() {
         return;
       }
       // dragger didn't move
-      var isExpanded = classie.has( this.element, 'expanded' );
-      classie.toggle( this.element, 'expanded' );
+      var isExpanded = this.element.classList.contains('expanded' );
+      this.element.classList.toggle('expanded');
       if ( !isExpanded ) {
         // HACK unplace first
         packery4.unplace( this.element );
@@ -183,8 +177,6 @@ window.onload = function() {
     });
     bindDraggies( pckry );
   })();
-
-};
 </script>
 
 </body>
