--- a/sandbox/fit.html
+++ b/sandbox/fit.html
@@ -61,13 +61,9 @@
   <div class="item"></div>
 </div>
 
-<script src="../bower_components/get-style-property/get-style-property.js"></script>
 <script src="../bower_components/get-size/get-size.js"></script>
 <script src="../bower_components/matches-selector/matches-selector.js"></script>
-<script src="../bower_components/eventEmitter/EventEmitter.js"></script>
-<script src="../bower_components/eventie/eventie.js"></script>
-<script src="../bower_components/doc-ready/doc-ready.js"></script>
-<script src="../bower_components/classie/classie.js"></script>
+<script src="../bower_components/ev-emitter/ev-emitter.js"></script>
 <script src="../bower_components/fizzy-ui-utils/utils.js"></script>
 <script src="../bower_components/outlayer/item.js"></script>
 <script src="../bower_components/outlayer/outlayer.js"></script>
@@ -77,20 +73,20 @@
 <script src="../js/packery.js"></script>
 
 <script>
-docReady( function() {
+
   ( function() {
     var container = document.querySelector('#expanding-demo');
     var pckry = new Packery( container );
 
-    eventie.bind( container, 'click', function( event ) {
+    container.addEventListener( 'click', function( event ) {
       // don't proceed if item was not clicked on
       var target = event.target;
-      if ( !classie.has( target, 'item' ) ) {
+      if ( !matchesSelector( target, '.item' ) ) {
         return;
       }
 
-      var isExpanded = classie.has( target, 'is-expanded' );
-      classie.toggleClass( target, 'is-expanded' );
+      var isExpanded = target.classList.contains('is-expanded');
+      target.classList.toggle('is-expanded');
 
       if ( isExpanded ) {
         // if shrinking, just layout
@@ -107,17 +103,17 @@ docReady( function() {
     var container = document.querySelector('#position-demo');
     var pckry = new Packery( container );
 
-    eventie.bind( container, 'click', function( event ) {
+    container.addEventListener( 'click', function( event ) {
       // don't proceed if item was not clicked on
       var target = event.target;
-      if ( !classie.has( target, 'item' ) ) {
+      if ( !matchesSelector( target, '.item' ) ) {
         return;
       }
       // position item at 40, 40
       pckry.fit( target, 40, 40 );
     });
   })();
-});
+
 </script>
 
 </body>
