🔧 _getOption() for isOptions

--- a/sandbox/draggabilly.html
+++ b/sandbox/draggabilly.html
@@ -172,7 +172,7 @@ function bindDraggies( packery ) {
     var pckry = new Packery( '#horiz', {
       columnWidth: 50,
       rowHeight: 50,
-      isHorizontal: true,
+      horizontal: true,
       transitionDuration: '0.8s'
     });
     bindDraggies( pckry );
