--- a/sandbox/save-positions.html
+++ b/sandbox/save-positions.html
@@ -106,7 +106,7 @@ var pckry = new Packery( grid, {
   transitionDuration: '0.3s',
   shiftResize: true,
   percentPosition: true,
-  isInitLayout: false
+  initLayout: false
 });
 
 var itemElems = grid.querySelectorAll('.grid-item');
