✅ redo draggable test for shift layout
🐞 fix bug with drag boundsWidth

--- a/test/index.html
+++ b/test/index.html
@@ -173,7 +173,9 @@
     <div class="item"></div>
   </div>
 
-  <div id="drag1" class="container">
+  <h2>Draggable</h2>
+
+  <div id="draggable" class="container">
     <div class="item i0"></div>
     <div class="item i1"></div>
     <div class="item i2"></div>
