--- a/sandbox/requirejs/index.html
+++ b/sandbox/requirejs/index.html
@@ -5,8 +5,8 @@
 
   <title>require js</title>
 
-  <link rel="stylesheet" href="css/examples.css" />
-  <script data-main="js/require-js" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.9/require.js"></script>
+  <link rel="stylesheet" href="../css/examples.css" />
+  <script data-main="main" src="https://npmcdn.com/requirejs@2.1/require.js"></script>
 
 </head>
 <body>
