--- a/sandbox/save-positions.html
+++ b/sandbox/save-positions.html
@@ -49,6 +49,8 @@ html { overflow-y: scroll; }
   opacity: 0.5;
   outline: 3px dashed black;
   outline-offset: -6px;
+  -webkit-transition: -webkit-transform 0.4s;
+  transition: transform 0.4s;
 }
 
 </style>
