--- a/sandbox/shift-drag-uneven.html
+++ b/sandbox/shift-drag-uneven.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
 
-  <title>piickery1</title>
+  <title>shift drag uneven</title>
 
 <style>
 * {
@@ -18,7 +18,7 @@
 
 .grid-item {
   width: 100px;
-  height: 100px;
+  height: 60px;
   border: 1px solid;
   background: #8BE;
 }
@@ -30,32 +30,37 @@
 }
 
 .grid-item.w2 { width: 200px; }
-.grid-item.h2 { height: 200px; }
+.grid-item.h2 { height: 100px; }
+.grid-item.h3 { height: 140px; }
+.grid-item.h4 { height: 240px; }
 </style>
 
 </head>
 <body>
 
-  <h1>piickery1</h1>
+  <h1>shift drag uneven</h1>
+
+<p><button class="button-layout">Layout</button></p>
 
 <div class="grid">
+  <div class="grid-item w2 h4"></div>
   <div class="grid-item w2 h2"></div>
   <div class="grid-item"></div>
-  <div class="grid-item"></div>
+  <div class="grid-item h3"></div>
   <div class="grid-item h2"></div>
   <div class="grid-item"></div>
-  <div class="grid-item w2"></div>
+  <div class="grid-item w2 h3"></div>
+  <div class="grid-item h2"></div>
+  <div class="grid-item h3"></div>
   <div class="grid-item"></div>
   <div class="grid-item h2"></div>
-  <div class="grid-item"></div>
-  <div class="grid-item w2"></div>
   <div class="grid-item w2 h2"></div>
   <div class="grid-item"></div>
   <div class="grid-item"></div>
 </div>
 
 <script src="../bower_components/get-size/get-size.js"></script>
-<script src="../bower_components/matches-selector/matches-selector.js"></script>
+<script src="../bower_components/desandro-matches-selector/matches-selector.js"></script>
 <script src="../bower_components/ev-emitter/ev-emitter.js"></script>
 <script src="../bower_components/fizzy-ui-utils/utils.js"></script>
 <script src="../bower_components/unipointer/unipointer.js"></script>
@@ -72,7 +77,7 @@
 var gridElem = document.querySelector('.grid');
 var pckry = new Packery( gridElem, {
   columnWidth: 100,
-  rowHeight: 100
+  // gutter: 20
 });
 
 var itemElems = gridElem.querySelectorAll('.grid-item');
@@ -82,6 +87,10 @@ for ( var i=0; i < itemElems.length; i++ ) {
   var draggie = new Draggabilly( itemElem );
   pckry.bindDraggabillyEvents( draggie );
 }
+
+document.querySelector('.button-layout').onclick = function() {
+  pckry.layout();
+};
 
 </script>
 
