--- a/sandbox/save-positions.html
+++ b/sandbox/save-positions.html
@@ -106,7 +106,7 @@ var pckry = new Packery( grid, {
   itemSelector: '.grid-item',
   columnWidth: '.grid-sizer',
   transitionDuration: '0.3s',
-  shiftResize: true,
+  shiftPercentResize: true,
   percentPosition: true,
   initLayout: false
 });
