--- a/sandbox/requirejs/index.html
+++ b/sandbox/requirejs/index.html
@@ -7,6 +7,7 @@
 
   <link rel="stylesheet" href="../css/examples.css" />
   <script data-main="main" src="https://npmcdn.com/requirejs@2.1/require.js"></script>
+  <!-- <script data-main="main" src="require.js"></script> -->
 
 </head>
 <body>
