Handle gutter array (https://github.com/metafizzy/packery/issues/2)

--- a/sandbox/gutter.html
+++ b/sandbox/gutter.html
@@ -7,7 +7,7 @@
   <title>fluid</title>
 
   <style>
-  * { box-sizing: border-box; } 
+  * { box-sizing: border-box; }
 
 body { font-family: sans-serif; }
 
@@ -79,8 +79,7 @@ body { font-family: sans-serif; }
 	itemSelector: '.grid-item',
 	resize: false,
 	percentPosition: true,
-	gutterWidth: '.gutter',
-	gutterHeight: 10
+	gutter: ['.gutter', 10]
   });
 </script>
 
