--- a/sandbox/fluid.html
+++ b/sandbox/fluid.html
@@ -58,7 +58,7 @@
     <div class="grid-item"></div>
   </div>
 
-  <h2>Draggable</h2>
+  <h2>Draggable, shift</h2>
 
   <div class="grid grid--draggable">
     <div class="grid-sizer"></div>
@@ -115,7 +115,7 @@ var pckry1 = new Packery( '.grid--draggable', {
 bindDragItems( pckry1 );
 
 var pckry2 = new Packery( '.grid--draggable-flow', {
-  pack: 'flow',
+  placePack: 'flow',
   itemSelector: '.grid-item',
   columnWidth: '.grid-sizer',
   percentPosition: true,
