--- a/sandbox/fit.html
+++ b/sandbox/fit.html
@@ -109,14 +109,14 @@
 
 var expandShiftPckry = new Packery('.expanding-demo.shift');
 var expandFlowPckry = new Packery( '.expanding-demo.flow', {
-  placePack: 'flow',
+  packStyle: 'flow',
 });
 expandFit( expandShiftPckry )
 expandFit( expandFlowPckry )
 
 var positionShiftPckry = new Packery('.position-demo.shift');
 var positionFlowPckry = new Packery( '.position-demo.flow', {
-  placePack: 'flow',
+  packStyle: 'flow',
 });
 positionFit( positionShiftPckry )
 positionFit( positionFlowPckry )
