--- a/sandbox/fluid.html
+++ b/sandbox/fluid.html
@@ -115,7 +115,7 @@ var pckry1 = new Packery( '.grid--draggable', {
 bindDragItems( pckry1 );
 
 var pckry2 = new Packery( '.grid--draggable-flow', {
-  placePack: 'flow',
+  packStyle: 'flow',
   itemSelector: '.grid-item',
   columnWidth: '.grid-sizer',
   percentPosition: true,
